Purple Background added

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
     padding: 0 30px 0 30px;
     font-family: 'Century', sans-serif;
     font-size: 13px;
-    background: #f9f8fb;
+    background: purple;
     color: #5D6063;
     /*  solid grey  */
 }
